fix: body reset overflow hidden

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -104,7 +104,6 @@ section {
 body {
   font-family: 'Noto Sans TC';
   line-height: 1;
-  overflow: hidden;
 }
 
 ol,
